add aboutController for creating aboutPage ,view and responcive

--- a/templates/pages/contact/index.html.twig
+++ b/templates/pages/contact/index.html.twig
@@ -127,7 +127,7 @@
     <div class="container d-flex justify-content-center align-items-center mt-5">
         <div class="row d-flex justify-content-center align-items-center my-5">
             <div class="col">
-                <a href="" class="btn btn-warning  rounded-0 px-5 py-4">
+                <a href="{{ path('about.index') }}" class="btn btn-warning  rounded-0 px-5 py-4">
                     VOIR PLUS
                 </a>
             </div>
