--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -16,7 +16,7 @@
         background-size:cover;
     }
     .banner h2{
-        font-size: 3rem;
+        font-size: 5rem;
         font-weight: bold;
         font-family: 'Ruthie', cursive;
     }
@@ -46,6 +46,7 @@
 		padding: 20px;
 		font-size: 1.5rem;
 		font-family: 'roboto', serif;
+		margin: 0 1rem;
 	}
 	.banner a:hover{
 		background: #fff;
@@ -87,6 +88,7 @@
 		</section>  
     	<span class="col-sm-12 col-md-3 col-lg-3 d-flex justify-content-center align-items-center ">
 			<a href="{{ path('contact.index') }}">NOUS CONTACTER</a>
+			 <a href="{{ path('security.registration')}}">S'INSCRIRE</a>
 		</span>
 	</div>
 </div>
@@ -171,6 +173,7 @@
 			<p class="fs-2 text-center text-white my-5">Découvrez l'univers envoûtant de l'houssArtGallery, où l'art prend vie dans une symphonie de couleurs et d'émotions. Notre nouvelle exposition vous invite à plonger au cœur d'une collection unique, où chaque œuvre raconte une histoire, éveille une émotion, ouvre une fenêtre sur un monde d'inspiration sans limite. De la peinture figurative aux sculptures modernes, nos collections célèbrent la diversité et la richesse de l'expression artistique. Laissez-vous transporter par la beauté et la créativité, et venez vivre une expérience inoubliable au sein de l'houssArtGallery. Rejoignez-nous pour un voyage au-delà du visible, où l'art révèle les nuances les plus subtiles de l'âme humaine.</p>
 			<div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
 				<a href="{{ path('products.index.public')}}">VOIR TOUS NOS TABLEAUX</a>
+				<a href="{{ path('security.registration')}}">S'INSCRIRE</a>
 			</div>
 	    </div>
 	</div>
@@ -218,6 +221,7 @@
 			<p class="fs-2 text-center my-5">Au sein de l'houssArtGallery, chaque collection est une ode à l'exploration artistique, un carrefour où se rencontrent passé, présent et futur. Nos soigneusement sélectionnées incarnent l'avant-garde de la créativité, allant des chefs-d'œuvre classiques réinterprétés aux expressions contemporaines les plus audacieuses. Chaque pièce est choisie pour sa capacité à dialoguer avec les sens, éveillant curiosité et admiration. Nous invitons les passionnés d'art et les collectionneurs à découvrir des trésors cachés, des œuvres qui défient le temps et racontent des histoires universelles. L'houssArtGallery est plus qu'une galerie, c'est un sanctuaire où l'art est célébré comme le reflet le plus pur de l'humanité.</p>
 			<div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
 				<a href="{{ path('collection.index.public')}}">VOIR TOUS NOS COLLECTIONS</a>
+				<a href="{{ path('security.registration')}}">S'INSCRIRE</a>
 			</div>
 	    </div>
 	</div>
