add all modification

--- a/templates/pages/about/index.html.twig
+++ b/templates/pages/about/index.html.twig
@@ -20,24 +20,24 @@
     margin: 0 1rem
 	  }
     .title{
-        margin: 10rem 0 0 ;
+        margin: 6rem 0 0 0;
     }
      .pagination li.active a{
         background-color:  #caa502;
         color: white;
+    }
+    .carousel{
+      box-shadow: 0 0 1rem #000;
     }
 </style>
 
 <body>
 <div class="container-fluid banner py-5">
     <div class="container">
-        <div class="row d-flex justify-content-center align-items-center pt-5">
-            <div class="col-12 title  d-flex justify-content-center align-items-center text-white text-center">
+        <div class="row  title d-flexjustify-content-center align-items-center mb-4">
+            <div class="col-12 title d-flex justify-content-center align-items-center text-white text-center">
                 <h1 class="heading text-white fw-bold">A Propos De Nous</h1>
             </div>
-        </div>
-
-        <div class="row  title d-flex- justify-content-center align-items-center mb-4">
             <div class="col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center align-items-center text-white text-center">
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                   <div class="carousel-inner">
@@ -62,9 +62,9 @@
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-12 col-lg-6 d-flex-colummn justify-content-center align-items-center text-white text-center">
+            <div class="col-sm-12  opacity col-md-12 col-lg-6 d-flex-colummn justify-content-center align-items-center text-white text-center">
                 <h2 class="heading text-warning fs-1 py-2 fw-bold">Notre Histoire</h2>
-                <p class="text-white p-4 fs-3"> HoussArtGallery, nichée au cœur d'une région riche en inspirations,
+                <p class="text-white p-4 fs-3 fw-bold"> HoussArtGallery, nichée au cœur d'une région riche en inspirations,
                 est née d'une passion inébranlable pour l'art sous toutes ses formes. Fondée en 2010 par Houssaine,
                 un visionnaire animé par le désir de mettre en lumière le génie créatif, 
                 la galerie a rapidement établi sa réputation en tant qu'espace d'avant-garde.
@@ -72,8 +72,6 @@
                 créant ainsi un pont entre le passé, le présent et l'avenir de l'art.
                 Au fil des ans, HoussArtGallery a organisé d'innombrables expositions,
                 devenant un lieu de rencontre incontournable pour les amateurs d'art et les collectionneurs.
-                Sa contribution significative à la scène artistique lui a valu une reconnaissance internationale, 
-                tout en restant profondément enracinée dans sa communauté locale.
                 Houssaine et son équipe continuent d'insuffler leur passion et leur dévouement dans chaque projet,
                 affirmant l'engagement de HoussArtGallery à enrichir la culture artistique et à inspirer les générations futures.
                 </p>
