add somme modification about style css

--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -30,7 +30,7 @@
         color: white;
         font-family: 'Abril Fatface', serif;
     }
-	 .banner1 img{
+	 .box img{
 		border-radius: 50%;
 		border: none;
 		box-shadow: 0 0 1rem #000;
