--- a/templates/pages/review/index.html.twig
+++ b/templates/pages/review/index.html.twig
@@ -63,7 +63,7 @@
                                     <a href="{{ path('review.edit', { id: review.id }) }}">Modifier</a>
                                 </td>
                                 <td>
-                                    {# <a href="{{ path('review.delete', { id: review.id }) }}">supprimer</a> #}
+                                    <a href="{{ path('review.delete', { id: review.id }) }}">supprimer</a>
                                 </td>
                            </tr>
                         {% endfor %}
