--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -18,14 +18,14 @@
 					<a href="#">&copy; 2024 HoussArtGallery.com |Designed By EL.Houss.Digital</a>
 		        </div>
 		        <div class="col-sm-12 termes col-md-6 col-lg-4 d-flex justify-content-around fs-4 align-items-center">
-			        <a href="{{ path('contact.index')}}">CONTACT</a>
-			        <a href="#">TERMES</a>
-			        <a href="#">POLITIQUES</a>
+			        <a href="{{ path('contact.index') }}">CONTACT</a>
+			        <a href="{{ path('termes.index') }}">TERMES</a>
+			        <a href="{{ path('politiques.index') }}">POLITIQUES</a>
 		        </div>
 		    </div>
 		</div>
         <div class="col-12 py-3 footerA d-flex justify-content-center align-items-center">
-			<a href="mailto:G.parrot@yahoo.fr">
+			<a href="mailto:HoussArtGallery@yahoo.fr">
 				<i class="fas  fa-envelope"></i>HoussArtGallery@Art.fr</a>
 			
 			<a href="tel:(+33) 123456789">
