add politiques file the website

--- a/templates/pages/termes/politiques.html.twig
+++ b/templates/pages/termes/politiques.html.twig
@@ -21,6 +21,90 @@
             <div class="col-10 d-flex justify-content-center align-items-cente">
                 <h1 class="heading py-5">Politiques d'Utilisation de HouseArtGallery</h1>
             </div>
+            <div class="col-10 d-flex-column justify-content-center align-items-center fs-3 p-5">
+                <p>
+                Date d'effet : [Date d'entrée en vigueur, par exemple, 28 Février 2024]
+
+                Bienvenue sur HoussArtGallery, votre destination privilégiée pour explorer et acheter des œuvres d'art contemporain.
+                En accédant à notre site web et en l'utilisant, vous acceptez de vous conformer aux politiques d'utilisation suivantes.
+                Ces politiques sont conçues pour garantir une expérience positive et sécurisée pour tous nos utilisateurs. 
+                Nous vous encourageons à les lire attentivement.
+                </p>
+
+                 <h2 class="fs-1 fw-bolder text-warning">1. Acceptation des Conditions</h2>
+                
+                <p>
+                En utilisant HoussArtGallery, vous acceptez d'être lié par ces conditions d'utilisation,
+                 toutes les lois et réglementations applicables, et convenez que vous êtes responsable
+                  de la conformité avec toutes les lois locales. Si vous n'êtes pas d'accord avec 
+                  l'une de ces conditions, vous êtes interdit d'utiliser ou d'accéder à ce site.
+                </p>
+                
+                <h2 class="fs-1 fw-bolder text-warning">2. Licence d'Utilisation</h2>
+                
+                <p>
+                <ul class="px-5 mx-5">
+                    <li>Sauf mention contraire, HoussArtGallery et/ou ses concédants de licence possèdent les droits de propriété intellectuelle pour tout le matériel sur HoussArtGallery.Tous les droits de propriété intellectuelle sont réservés.</li>
+                    <li> Vous pouvez accéder à cela pour votre usage personnel, sous réserve des restrictions définies dans ces termes et conditions.</li>
+                </ul>
+                </p>
+                <h2 class="fs-1 fw-bolder text-warning">3. Restrictions</h2>
+                <p>Vous êtes expressément interdit de :</p>
+                <ul class="px-5 mx-5">
+                    <li>Publier du matériel du site dans un média sans notre consentement préalable.</li>
+                    <li>Vendre, sous-licencier et/ou commercialiser tout matériel du site.</li>
+                    <li>Effectuer et/ou montrer publiquement tout matériel du site.</li>
+                    <li>Utiliser ce site d'une manière qui est ou peut être préjudiciable à ce site.</li>
+                    <li>Utiliser ce site pour copier, stocker, héberger, transmettre, envoyer, utiliser,
+                     publier ou distribuer tout matériel qui consiste en (ou est lié à) un logiciel espion, un virus informatique, 
+                     un cheval de Troie, un ver, un enregistreur de frappe, un rootkit ou tout autre logiciel malveillant.</li>
+                    <li>Mener toute activité systématique ou automatisée de collecte de données sur ou en relation avec ce site 
+                    sans le consentement écrit express de HoussArtGallery.</li>
+                </ul>
+
+                <h2 class="fs-1 fw-bolder text-warning">4. Contenu de l'Utilisateur</h2>
+                
+                <p>Dans ces politiques d'utilisation, «votre contenu» désigne tout audio, vidéo, texte, 
+                images ou autre matériel que vous choisissez d'afficher sur ce site. En affichant votre contenu, 
+                vous accordez à HoussArtGallery une licence non exclusive, mondiale, irrévocable, sous-licenciable pour utiliser,
+                 reproduire, adapter, publier, traduire et distribuer dans tous les médias.
+                <br><br>
+                Votre contenu doit être le vôtre et ne doit pas empiéter sur les droits de tiers.
+                 HoussArtGallery se réserve le droit de retirer tout contenu de votre part à tout moment, sans préavis.
+                </p>
+                
+                <h2 class="fs-1 fw-bolder text-warning">5. Confidentialité</h2>
+
+                <p>
+                Votre vie privée est importante pour nous. Notre politique de confidentialité explique comment nous collectons,
+                utilisons, protégeons et divulguons vos informations. En utilisant HoussArtGallery,
+                vous consentez également à notre utilisation des données conformément à notre politique de confidentialité.
+                </p>
+
+                <h2 class="fs-1 fw-bolder text-warning">6. Limitations de Responsabilité</h2>
+
+                <p>
+                HoussArtGallery ne sera pas responsable des dommages qui pourraient survenir avec l'utilisation ou l'incapacité 
+                d'utiliser le matériel sur le site Internet de HoussArtGallery, même si HoussArtGallery ou un représentant 
+                autorisé de ce site a été notifié, oralement ou par écrit, de la possibilité de tels dommages.
+                </p>
+
+                <h2 class="fs-1 fw-bolder text-warning">7. Modifications des Termes</h2>
+
+                <p>
+                HoussArtGallery se réserve le droit de réviser ces termes d'utilisation pour son site web à tout moment sans préavis.
+                En utilisant ce site web, vous acceptez d'être lié par la version actuelle de ces termes et conditions d'utilisation.
+                </p>
+
+                <h2 class="fs-1 fw-bolder text-warning">8. Droit Applicable</h2>
+
+                <p class="pb-5 mb-5">
+                Tout litige relatif à HoussArtGallery sera régi par les lois du pays de HoussArtGallery sans égard à son conflit de lois.
+                <br><br>
+                Si vous avez des questions concernant nos politiques d'utilisation, veuillez nous contacter à <a class="text-warning" href="mailto:HoussArtGallery@yahoo.fr">
+                <i class="fas  fa-envelope"></i> . HoussArtGallery@Art.fr</a>.
+                </p>
+            </div>
         </div>
     </div>  
 </div>
