--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -37,6 +37,9 @@
 			<a href="#"><i class="fa-brands fa-twitter fs-1 text-warning"></i></a>
 			<a href="#"><i class="fa-brands fa-instagram fs-1 text-warning"></i></a>
 		</div>
+		<div class="logo">
+				 <a class="navbar-brand" href="#"><img data-speed="5" class="homeParalexEffect" width="120px" height="70px"src="{{ asset('images/logo siteart.png') }}" alt=""></a>
+		</div>
 		
 		{% endblock %}
 </footer>
