--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -309,9 +309,11 @@ footer a:hover{
     position: relative;
     transition: transform 0.5s ease-in-out;
 }
-.footerL .logo{
-    text-shadow: 15px 15px 15px rgb(1, 1, 42);
-    font-style:italic ;
+.footer .logo{
+    box-shadow: 0 0 15px rgb(1, 1, 42);
+    position: absolute;
+    bottom: 20px;
+    left : 50px;
 }
 
 .footerL .logo span:hover{
