add ContactVoter and ReviewVoter for boosting security

--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -250,7 +250,7 @@
 						<span class="fs-3">{{ review.prenom }}</span>
 						<p>{{ review.message|slice(0,100) ~ '...'}}</p>
 						<h3>Satisfait</h3>
-						<div class="stars">
+						<div class="stars text-danger fs-3">
 							<i class="fas fa-star"></i>
 							<i class="fas fa-star"></i>
 							<i class="fas fa-star"></i>
