--- a/templates/pages/products/edit.html.twig
+++ b/templates/pages/products/edit.html.twig
@@ -95,6 +95,14 @@
                 </div>
                 </div>
 
+                  <div class="form-group text-white fs-4">    
+                {{ form_label(form.images) }}
+                {{ form_widget(form.images) }}
+                <div class="form-error">
+                    {{ form_errors(form.images)}}
+                </div>
+                </div>
+
                 <div class="form-group text-white fs-4 py-3">    
                 {{ form_label(form.isPublic) }}
                 {{ form_widget(form.isPublic) }}
