--- a/templates/pages/products/index_public.html.twig
+++ b/templates/pages/products/index_public.html.twig
@@ -42,7 +42,7 @@
             {% for products in products %}
                 <div class="col-sm-12 col-md-6 col-lg-4 my-3">
                     <div class="card h-100">
-                        <img src="https://cdn.pixabay.com/photo/2017/02/01/07/52/child-2029072_1280.jpg" class="card-img-top" alt="...">
+                        <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title fs-3 fw-bold ">{{ products.name }}</h5>
                             <p class="card-text fs-5">{{ products.property|slice(1, 100) ~ '...' }}</p>
