--- a/templates/pages/products/show.html.twig
+++ b/templates/pages/products/show.html.twig
@@ -68,13 +68,13 @@
                             </div>
                             <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="https://cdn.pixabay.com/photo/2019/05/01/10/14/research-4170441_1280.jpg" class="d-block img w-100 p-3" alt="...">
+                                <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block img w-100 p-3" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="https://cdn.pixabay.com/photo/2017/02/01/07/52/child-2029072_1280.jpg" class="d-block img w-100 p-3" alt="...">
+                                <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block img w-100 p-3" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="https://cdn.pixabay.com/photo/2021/08/11/16/06/mountain-6538890_1280.jpg" class="d-block img w-100 p-3" alt="...">
+                                <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block img w-100 p-3" alt="...">
                             </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
