--- a/templates/pages/collection/edit.html.twig
+++ b/templates/pages/collection/edit.html.twig
@@ -79,6 +79,14 @@
                 </div>
                 </div>
 
+                      <div class="form-group fs-4">    
+                {{ form_label(form.imageFile) }}
+                {{ form_widget(form.imageFile) }}
+                <div class="form-error">
+                    {{ form_errors(form.imageFile)}}
+                </div>
+                </div>
+
                 <div class="form-group text-white fs-4 mt-4">    
                 {{ form_label(form.isFavorite) }}
                 {{ form_widget(form.isFavorite) }}
