--- a/templates/pages/collection/index_public.html.twig
+++ b/templates/pages/collection/index_public.html.twig
@@ -33,6 +33,9 @@ body{
 hr{
     border: solid 1px #fff; 
 }
+img .shadow{
+    box-shadow: 0 0 15px black;
+}
 </style>
     
 
@@ -58,14 +61,14 @@ hr{
         {% for colletion in colletion %}
             <div class="row d-flex justify-content-center align-items-center mb-5">
                 <div class="col-12 d-flex justify-content-end align-item-center Empty">
-                    <img src="https://cdn.pixabay.com/photo/2023/03/17/20/42/camera-7859402_1280.jpg" width="150px" height="150px" class="radius">
+                    <img src="{{ vich_uploader_asset(colletion, 'imageFile') }}" width="100px" height="100px" class="radius">
                 </div> 
                 <div class="col-12 d-flex justify-content-end align-item-center ">
                     <p class="mx-3 fs-1 text-warning artist"> Artiste : {{ colletion.artist}}</p>
                 </div> 
-                <div class="col-12 col-md-12 col-lg-8">
-                    <div class="card h-100 box-ch rounded-0 border-none bg-white">
-                    <h1 class="p-4 text-warning text-center artist">{{ colletion.name}}</h1>
+                <div class="col-12 col-md-10 col-lg-7">
+                    <div class="card h-100 box-ch rounded-0 border-none bg-transparent">
+                    <h1 class="p-4 text-warning text-center artist fs-1">{{ colletion.name}}</h1>
                         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                             <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -74,13 +77,13 @@ hr{
                             </div>
                             <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="https://cdn.pixabay.com/photo/2019/05/01/10/14/research-4170441_1280.jpg" class="d-block w-100 p-3" alt="...">
+                                <img src="{{ vich_uploader_asset(colletion, 'imageFile') }}" class="d-block w-100 p-3 shadow" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="https://cdn.pixabay.com/photo/2017/02/01/07/52/child-2029072_1280.jpg" class="d-block w-100 p-3" alt="...">
+                                <img src="{{ vich_uploader_asset(colletion, 'imageFile') }}" class="d-block w-100 p-3 shadow" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="https://cdn.pixabay.com/photo/2021/08/11/16/06/mountain-6538890_1280.jpg" class="d-block w-100 p-3" alt="...">
+                                <img src="{{ vich_uploader_asset(colletion, 'imageFile') }}" class="d-block w-100 p-3 shadow" alt="...">
                             </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
