--- a/templates/pages/collection/new.html.twig
+++ b/templates/pages/collection/new.html.twig
@@ -71,12 +71,20 @@
                     {{ form_errors(form.price)}}
                 </div>
                 </div>
-        
+
                 <div class="form-group text-white fs-4">    
                 {{ form_label(form.description) }}
                 {{ form_widget(form.description) }}
                 <div class="form-error">
                     {{ form_errors(form.description)}}
+                </div>
+                </div>
+                
+                <div class="form-group fs-4">    
+                {{ form_label(form.imageFile) }}
+                {{ form_widget(form.imageFile) }}
+                <div class="form-error">
+                    {{ form_errors(form.imageFile)}}
                 </div>
                 </div>
 
