--- a/templates/pages/collection/show.html.twig
+++ b/templates/pages/collection/show.html.twig
@@ -97,13 +97,13 @@
                             </div>
                             <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="https://cdn.pixabay.com/photo/2019/05/01/10/14/research-4170441_1280.jpg" class="d-block w-100 p-3" alt="...">
+                                <img src="{{ vich_uploader_asset(colletion, 'imageFile') }}" class="d-block w-100 p-3" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="https://cdn.pixabay.com/photo/2017/02/01/07/52/child-2029072_1280.jpg" class="d-block w-100 p-3" alt="...">
+                                <img src="{{ vich_uploader_asset(colletion, 'imageFile') }}" class="d-block w-100 p-3" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="https://cdn.pixabay.com/photo/2021/08/11/16/06/mountain-6538890_1280.jpg" class="d-block w-100 p-3" alt="...">
+                                <img src="{{ vich_uploader_asset(colletion, 'imageFile') }}" class="d-block w-100 p-3" alt="...">
                             </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -124,7 +124,7 @@
                             {% for products in colletion.products %}
                                 <div class="col-sm-3 col-md-3 col-lg-3 my-3">
                                     <div class="card">
-                                    <a href="{{ path('products.show', { id:products.id }) }}"><img src="#" class="card-img-top" alt="..."></a>
+                                    <a href="{{ path('products.show', { id:products.id }) }}"><img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="card-img-top" alt="..."></a>
                                     <div class="card-body">
                                         <h5 class="card-title">{{ products.name }}</h5>
                                         <p class="card-text">{{ products.property|slice(0, 50) ~ '...' }}</p>
