--- a/templates/pages/products/edit.html.twig
+++ b/templates/pages/products/edit.html.twig
@@ -95,13 +95,13 @@
                 </div>
                 </div>
 
-                  <div class="form-group text-white fs-4">    
-                {{ form_label(form.images) }}
-                {{ form_widget(form.images) }}
+                <div class="form-group text-white fs-4">    
+                {{ form_label(form.imageFile) }}
+                {{ form_widget(form.imageFile) }}
                 <div class="form-error">
-                    {{ form_errors(form.images)}}
+                    {{ form_errors(form.imageFile)}}
                 </div>
-                </div>
+            </div>
 
                 <div class="form-group text-white fs-4 py-3">    
                 {{ form_label(form.isPublic) }}
