--- a/templates/pages/products/new.html.twig
+++ b/templates/pages/products/new.html.twig
@@ -88,11 +88,11 @@
                 </div>
                 </div>
 
-                <div class="form-group text-white fs-4">    
-                {{ form_label(form.images) }}
-                {{ form_widget(form.images) }}
+                 <div class="form-group text-white fs-4">    
+                {{ form_label(form.imageFile) }}
+                {{ form_widget(form.imageFile) }}
                 <div class="form-error">
-                    {{ form_errors(form.images)}}
+                    {{ form_errors(form.imageFile)}}
                 </div>
                 </div>
 
