--- a/templates/pages/image_products/index.html.twig
+++ b/templates/pages/image_products/index.html.twig
@@ -64,10 +64,10 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for image_products in image_productsproducts %}
+                        {% for image_products in image_products %}
                         <tr>
                             <th  class="d-flex justify-content-center align-items-center text-warning">{{ image_products.id }}</th>
-                            <th>{{ image_products.name }}</th>
+                            <th>{{ vich_uploader_asset(image_products, 'imageFile') }}</th>
                             <td>{{ image_products.createdAt|date('d/m/Y') }}</td>
                             <td>
                                {# <a href="{{ path('products.edit', { id: products.id }) }}" class="text-warning">Modifier</a> #}
