add easyadmin for create menu and crud items

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -4,5 +4,15 @@
 {% endblock %}
 
 {% block content %}
-	<h1>Bienvenue au sein de l'administration de HoussArtGallery</h1>
+<div class="container">
+   <div class="row d-flex justify-content-center align-items-center">
+      <div class="col-12 text-center mt-5">
+	    <h1>Bienvenue au sein de l'administration de HoussArtGallery</h1>
+      </div>
+
+      <div class="col-sm-12 col-md-10 col-lg-8 d-flex justify-content-center align-items-center py-5">
+	    <img src="{{ asset('images/logo siteart.png') }}">
+      </div>
+  </div>
+</div>
 {% endblock %}
