--- a/templates/pages/about/index.html.twig
+++ b/templates/pages/about/index.html.twig
@@ -22,7 +22,10 @@
     .title{
         margin: 6rem 0 0 0;
     }
-     .pagination li.active a{
+    .title h1{
+        text-shadow: 0 0 1rem #000;
+    }
+    .pagination li.active a{
         background-color:  #caa502;
         color: white;
     }
@@ -88,7 +91,7 @@
 <div class="container-fluid banner1 bg-white py-5">
         <div class="row d-flex justify-content-center align-items-center mb-4">
          <h1 class="heading fw-bold py-5">Art Sans Frontières</h1>
-         <h1 class="heading fw-bold fs-2 text-dark">Où chaque création raconte une histoire universelle</h1>
+         <h1 class="heading fw-bold fs-1 text-dark">Où chaque création raconte une histoire universelle</h1>
           <div class="col-12 col-md-10 col-lg-10 py-5">
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                  <div class="carousel-indicators">
