--- a/templates/pages/review/show.html.twig
+++ b/templates/pages/review/show.html.twig
@@ -38,8 +38,8 @@
             </div>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <div class="content p-3 text-white fs-2">
-                    <span class="fs-3">{{ review.nom }}</span>
-                    <span class="fs-3">{{ review.prenom }}</span>
+                    <span class="fs-3">{{ review.fullName }}</span>
+                    <span class="fs-3">{{ review.fullName }}</span>
                     <p class="py-4 my-5">{{ review.message }}</p>
                     <span class="fs-4 text-info">{{ review.createdAt|date('d/m/Y') }}</span>
                     <h3 class="text-warning fs-1 fw-bold">Satisfait</h3>
