--- a/templates/pages/review/new.html.twig
+++ b/templates/pages/review/new.html.twig
@@ -39,19 +39,11 @@
                 {{ form_start(form) }}
 
                 <div class="form-group fs-4 mt-4">       
-                {{ form_label(form.nom) }}
-                {{ form_widget(form.nom) }}
+                {{ form_label(form.fullName) }}
+                {{ form_widget(form.fullName) }}
                 <div class="form-error">
-                    {{ form_errors(form.nom)}}
+                    {{ form_errors(form.fullName)}}
                 </div>
-                </div>
-
-                <div class="form-group fs-4">    
-                {{ form_label(form.prenom) }}
-                {{ form_widget(form.prenom)}}
-                <div class="form-error">
-                    {{ form_errors(form.prenom)}}
-                </div
                 </div>
 
                 <div class="form-group fs-4">    
