--- a/templates/pages/about/index.html.twig
+++ b/templates/pages/about/index.html.twig
@@ -45,13 +45,13 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="{{asset('images/expo1.jpg')}}" class="d-block w-100" alt="...">
+                      <img src="{{asset('images/fondCRUD.jpg') }}" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="{{asset('images/expo2.jpg')}}" class="d-block w-100" alt="...">
+                      <img src="{{asset('images/expo5.jpg') }}" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="{{asset('images/expo4.jpg')}}" class="d-block w-100" alt="...">
+                      <img src="{{asset('images/expo7.jpg') }}" class="d-block w-100" alt="...">
                     </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -114,7 +114,7 @@
                      </div>
                    </div>
                    <div class="carousel-item" data-bs-interval="2000">
-                     <img src="{{asset('images/expo3.webp') }}" class="d-block w-100" alt="...">
+                     <img src="{{asset('images/fondCRUD.jpg') }}" class="d-block w-100" alt="...">
                      <div class="carousel-caption d-none d-md-block">
                        <h5 class="text-white heading">L'art abstrait!</h5>
                        <p class="text-white fs-1">L'art abstrait est une danse des formes et des couleurs
@@ -165,7 +165,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="card h-100">
-          <img src="{{asset('images/expo6.png') }}" class="card-img-top" alt="...">
+          <img src="{{asset('images/expo5.jpg') }}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title heading fs-1">Artistes</h5>
             <p class="card-text fs-3">"Collaborer avec tous les artistes, c'est tisser un riche tapis d'idées, de styles et de visions,
@@ -180,7 +180,7 @@
       </div>
       <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="card h-100">
-          <img src="{{asset('images/expo4.jpg') }}" class="card-img-top" alt="...">
+          <img src="{{asset('images/expo7.jpg') }}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title heading fs-1">Les Professionnels</h5>
             <p class="card-text fs-3">"En collaborant avec des professionnels de l'art, nous tissons un réseau d'excellence,
@@ -196,7 +196,7 @@
       </div>
       <div class="col-sm-12 col-md-12 col-lg-4">
         <div class="card h-100">
-          <img src="{{asset('images/expo2.jpg') }}" class="card-img-top" alt="...">
+          <img src="{{asset('images/fondCRUD.jpg') }}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title heading fs-1">Les établissements </h5>
             <p class="card-text fs-3">"Nos établissements d'art sont des sanctuaires de la créativité, des lieux où l'inspiration se fond avec 
