add artist propertys for creating artist views for all products

--- a/templates/pages/collection/show.html.twig
+++ b/templates/pages/collection/show.html.twig
@@ -82,7 +82,7 @@
                {% endfor %}
 
                 <div class="col-12 col-md-12 col-lg-6">
-                    <img src="https://cdn.pixabay.com/photo/2023/03/17/20/42/camera-7859402_1280.jpg" width="180px" height="180px" class="radius">
+                    <img src="{{ vich_uploader_asset(colletion, 'artistImageFile') }}" width="180px" height="180px" class="radius">
                 </div> 
                 <div class="col-12 col-md-12 col-lg-6 my-5">
                     <div class="card bg-white mx-5 fs-5 h-100">
