--- a/templates/pages/collection/new.html.twig
+++ b/templates/pages/collection/new.html.twig
@@ -88,6 +88,14 @@
                 </div>
                 </div>
 
+                <div class="form-group text-white fs-4">    
+                {{ form_label(form.artistImageFile) }}
+                {{ form_widget(form.artistImageFile) }}
+                <div class="form-error">
+                    {{ form_errors(form.artistImageFile)}}
+                </div>
+                </div>
+
                 <div class="form-group text-white fs-4 mt-4">    
                 {{ form_label(form.isFavorite) }}
                 {{ form_widget(form.isFavorite) }}
