--- a/templates/pages/products/edit.html.twig
+++ b/templates/pages/products/edit.html.twig
@@ -11,7 +11,7 @@
         box-sizing: border-box;
     }
     .banner{
-        height:900px;
+        height:100%;
         background:linear-gradient(rgba(0, 0, 0,.5),rgba(0, 0, 0,.5)),url(https://cdn.pixabay.com/photo/2016/09/04/12/38/living-room-1643855_1280.jpg) center fixed no-repeat;
         background-size:cover; 
     }
@@ -101,7 +101,15 @@
                 <div class="form-error">
                     {{ form_errors(form.imageFile)}}
                 </div>
-            </div>
+                </div>
+
+                <div class="form-group text-white fs-4">    
+                {{ form_label(form.artistImageFile) }}
+                {{ form_widget(form.artistImageFile) }}
+                <div class="form-error">
+                    {{ form_errors(form.artistImageFile)}}
+                </div>
+                </div>
 
                 <div class="form-group text-white fs-4 py-3">    
                 {{ form_label(form.isPublic) }}
