--- a/templates/pages/products/new.html.twig
+++ b/templates/pages/products/new.html.twig
@@ -96,6 +96,14 @@
                 </div>
                 </div>
 
+                 <div class="form-group text-white fs-4">    
+                {{ form_label(form.artistImageFile) }}
+                {{ form_widget(form.artistImageFile) }}
+                <div class="form-error">
+                    {{ form_errors(form.artistImageFile)}}
+                </div>
+                </div>
+
                 <div class="form-group text-white fs-4 my-4">    
                 {{ form_label(form.isPublic) }}
                 {{ form_widget(form.isPublic) }}
