--- a/templates/pages/products/show.html.twig
+++ b/templates/pages/products/show.html.twig
@@ -60,7 +60,7 @@
                {% endfor %} 
                
                 <div class="col-sm-12 col-md-12 col-lg-4 d-flex-column justify-content-end align-items-center">
-                    <img src="https://cdn.pixabay.com/photo/2023/03/17/20/42/camera-7859402_1280.jpg" width="180px" height="180px" class="radius">
+                    <img src="{{ vich_uploader_asset(products, 'artistImageFile') }}" width="180px" height="180px" class="radius">
                     <p class="mx-3 fs-1 text-warning artist">{{ products.artist}}</p>
                 </div> 
                 <div class="col-sm-12 col-md-12 col-lg-8">
