--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -71,7 +71,7 @@
 	{% else %}
 
 		<div id="LoginBtn">
-			<button class="btn fs-4"><a class="dropdown-item" href="{{ path('security.login') }}"><i class="fas fa-user"></i>SignUp</a></button>
+			<a class="dropdown-item btn btn-warning" href="{{ path('security.login') }}"><i class="fas fa-user"></i>SignUp</a>
 			
 		</div>
 	{% endif %}
