add FindPublished branch to find the posts with STATE_PUBLISHED critere

--- a/templates/pages/post/index.html.twig
+++ b/templates/pages/post/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}HoussArtGaller - Nos Articles{% endblock %}
+{% block title %}HoussArtGallery - Nos Articles{% endblock %}
 
 {% block body %}
 <h1>Hello PostController !</h1>
