add newPostBranch for creating a new post in PostController, && create PostType for addig mew posts by templates

--- a/templates/pages/post/show.html.twig
+++ b/templates/pages/post/show.html.twig
@@ -6,7 +6,7 @@
     
 <style>
     .banner{
-        height: 800px;
+        height: 100%;
         background:linear-gradient(rgba(0, 0, 0,.5),rgba(0, 0, 0,.5)),url(https://cdn.pixabay.com/photo/2016/09/04/12/38/living-room-1643855_1280.jpg) center center fixed no-repeat;
         background-size:cover;
     }
@@ -25,7 +25,7 @@
         <div class="row d-flex justify-content-center align-items-center">
         <div class="col-12 height">
         </div>
-        <div class="col-12 d-flex justify-content-center align-items-center my-5">
+        <div class="col-10 d-flex justify-content-center align-items-center my-5">
             <div class="card mb-3">
                 <img src="{{ vich_uploader_asset(posts, 'imageFile') }}" class="card-img-top" alt="...">
                 <div class="card-body">
