--- a/templates/pages/post/index_public.html.twig
+++ b/templates/pages/post/index_public.html.twig
@@ -36,6 +36,9 @@
         <div class="col-12 pt-5 text-warning">
             <h2 class="text-secondary fs-4">Il y'a {{ posts.getTotalItemCount}} articles au total.</h2>
         </div>
+        <div class="d-flex justify-content-start align-items-center my-4">
+            <a href="{{ path('post.new') }}" class="btn btn-warning fs-4">Ajouter Un Article</a>
+        </div>
 
         <div class="container">
             <div class="row d-flex justify-content-between align-items-center">
@@ -48,9 +51,6 @@
                         <div class="card-body">
                             <h5 class="card-title fs-3 fw-bold ">{{ post.title }}</h5>
                             <p class="card-text fs-5">{{ post.content|slice(1, 200) ~ '...' }}</p>
-                        </div>
-                        <div class="d-flex justify-content-center align-items-center my-4">
-                            {# <a href="{{ path('products.show', { id:products.id }) }}" class="btn btn-warning fs-4">Voir Le produit</a> #}
                         </div>
                     </div>
                 </div>
