--- a/templates/pages/post/index_public.html.twig
+++ b/templates/pages/post/index_public.html.twig
@@ -45,12 +45,14 @@
             {% for post in posts %}
                 <div class="col-sm-12 col-md-6 col-lg-4 my-3">
                     <div class="card h-100">
-                        <a href="{{ path('post.show', { id:post.id }) }}">
+                        <a href="{{ path('post.show', { slug:post.slug }) }}">
                             <img src="{{ vich_uploader_asset(post, 'imageFile') }}" class="card-img-top w-100" alt="...">
                         </a>
                         <div class="card-body">
-                            <h5 class="card-title fs-3 fw-bold ">{{ post.title }}</h5>
-                            <p class="card-text fs-5">{{ post.content|slice(1, 200) ~ '...' }}</p>
+                            <h1 class="card-text fs-2"><small class="text-warning">Publié Le {{ post.createdAt|date('d/m/Y') }}</small></h1>
+                            <h5 class="card-title fs-3 fw-bold ">{{ post.title|capitalize }}</h5>
+                            <p class="card-text fs-4">{{ post.content|slice(1, 200) ~ '...' }}</p>
+                            <p class="card-text fs-2"><small class="text-info ">Dérnière Mise à jour {{ post.updatedAt|date('d/m/Y') }}</small></p>
                         </div>
                     </div>
                 </div>
