add SMsharing branch to allow us to share the posts in the social media from our app

--- a/templates/pages/post/show.html.twig
+++ b/templates/pages/post/show.html.twig
@@ -25,6 +25,7 @@
         <div class="row d-flex justify-content-center align-items-center">
         <div class="col-12 height">
         </div>
+        {% include "components/_share.html.twig" %}
         <div class="col-10 d-flex justify-content-center align-items-center my-5">
             <div class="card mb-3">
                 <img src="{{ vich_uploader_asset(post, 'imageFile') }}" class="card-img-top" alt="...">
